update to webdev

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
 # Files and directories created by pub
 .dart_tool/
+.vscode/
 .packages
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
