--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "electron-quick-start-flutter",
   "version": "1.0.0",
   "description": "A minimal Electron application with flutter & dart",
-  "main": "web/main.js",
+  "main": "debug.js",
   "scripts": {
-    "build": "npm run dev && pub run build_runner build --config=release -o build",
+    "build": "webdev build",
     "build_runner_serve": "pub run build_runner serve --hot-reload",
     "dev": "run-p \"build_runner_serve\" \"start\"",
     "start": "electron ."
