--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A minimal Electron application with flutter & dart",
   "main": "debug.js",
   "scripts": {
-    "build": "webdev build",
-    "build_flutter_server": "flutter run --web-port 8080 -d web-server",
+    "clean": "flutter clean",
+    "build": "flutter build web",
+    "build_flutter_server": "flutter run --web-port 8096 -d web-server",
     "dev": "run-p \"build_flutter_server\" \"start\"",
     "start": "electron ."
   },
@@ -13,7 +14,7 @@
   "author": "GitHub",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^6.0.1",
+    "electron": "^8.2.3",
     "npm-run-all": "^4.1.5"
   }
 }
