--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,14 @@ name: hello_world
 description: An app built using Flutter for web
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
-  flutter: ^1.12.13
+  sdk: '>=2.6.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  pedantic: ^1.8.0+1
+  pedantic: ^1.9.0
+  
+flutter:
+  uses-material-design: true
