lock and log files  is for personal information

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 node_modules
+
 # Files and directories created by pub
 .dart_tool/
 .vscode/
 .packages
+
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
+package-lock.json
 
 # Conventional directory for build outputs
 build/
 
 # Directory created by dartdoc
 doc/api/
+
+#No include log files
+*.log
