--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "debug.js",
   "scripts": {
     "clean": "flutter clean",
-    "build": "flutter build web",
-    "build_flutter_server": "flutter run --web-port 8096 -d web-server",
-    "dev": "run-p \"build_flutter_server\" \"start\"",
-    "start": "electron ."
+    "build:flutter": "flutter build web",
+    "build:electron": "cd build/web && npm run build",
+    "flutter_server": "flutter run --web-port 8096 -d web-server",
+    "dev": "run-p flutter_server start",
+    "start": "electron .",
+    "test": "run-s build:flutter build:electron"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "author": "GitHub",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^8.2.3",
+    "electron": "^9.2.1",
+    "electron-packager": "^15.0.0",
     "npm-run-all": "^4.1.5"
   }
 }
