--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "xps",
-    "short_name": "xps",
+    "name": "flutter web",
+    "short_name": "flutter",
     "start_url": ".",
-    "display": "minimal-ui",
+    "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
     "description": "A new Flutter project.",
