--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,7 @@
   "main": "main.js",
   "scripts": {
     "build": "electron-packager .",
-    "package": "electron-packager . --all",
-    "start": "electron ."
+    "package": "electron-packager . --all"
   },
   "devDependencies": {
     "electron": "^8.2.3",
